Standard List instead of ObjectList

--- a/webapp/localService/mockdata/ApprovalReqSet.json
+++ b/webapp/localService/mockdata/ApprovalReqSet.json
@@ -1,28 +1,52 @@
 [{
 	"RequestID": "1",
 	"requester": "Yuri Natchetoi",
-	"approvalSubject": "Timesheet",
-	"approver": "Asad Sultan",
+	"approvalSubject": "HP SM software upgrade to new version",
+	"approver": "Johan Macedo",
 	"approvalId": "1",
-	"ApprovalSummary": "Please approve my October timesheet",
-	"approvalType": "imeSheet",
-	"approvalStatus": "Approved"
+	"ApprovalSummary": "Please approve HP SM software upgrade to new version in order to use RESTful Web Services",
+	"approvalType": "CAB",
+	"approvalStatus": ""
 }, {
 	"RequestID": "2",
-	"requester": "George Liu",
-	"approvalSubject": "Back-end Access ",
-	"approver": "IT Security",
+	"requester": "Ishay Freedman",
+	"approvalSubject": "Install Service pack 4 on SMP 3 server",
+	"approver": "Johan Macedo",
 	"approvalId": "2",
-	"ApprovalSummary": "I need access to approval API dev serverrver",
-	"approvalType": "Security",
-	"approvalStatus": "Approved"
+	"ApprovalSummary": "SMP 3 server needs to be upgraded",
+	"approvalType": "CAB",
+	"approvalStatus": ""
 }, {
 	"RequestID": "3",
-	"requester": "William She",
-	"approvalSubject": "Leave request",
+	"requester": "Marco Palermo",
+	"approvalSubject": "Develop approval application for Managers",
 	"approver": "Johan Macedo",
 	"approvalId": "3",
-	"ApprovalSummary": "I need a sick day off",
-	"approvalType": "Leave",
-	"approvalStatus": "Approved"
+	"ApprovalSummary": "Our team has beed tasked to develop an approval application for Managers",
+	"approvalType": "CAB",
+	"approvalStatus": ""
+}, {
+	"RequestID": "4",
+	"approvalSubject": "Access to MH 15th floor for George Liu ",
+	"requester": "George Liu ",
+	"approver": "Johan Macedo",
+	"approvalId": "4",
+	"ApprovalSummary": "Access to MH 15th floor for George Liu ",
+	"approvalType": "SEC"
+}, {
+	"RequestID": "5",
+	"approvalId": "5",
+	"approvalSubject": "Access to MH 1st  floor for Paul Gill",
+	"ApprovalSummary": "Access to MH 1st  floor for Paul Gill",
+	"approvalType": "SEC",
+	"approver": "Johan Macedo",
+	"requester": "Paul Gill"
+}, {
+	"RequestID": "6",
+	"approvalId": "6",
+	"approvalType": "SEC",
+	"ApprovalSummary": "Access to 200 Wellington 16th floor for William She",
+	"approvalSubject": "Access to 200 Wellington 16th floor for William She",
+	"requester": "William She",
+	"approver": "Johan Macedo"
 }]
