--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -44,10 +44,7 @@
 			"tablet": true,
 			"phone": true
 		},
-		"supportedThemes": [
-			"sap_hcb",
-			"sap_bluecrystal"
-		]
+		"supportedThemes": ["sap_hcb", "sap_bluecrystal"]
 	},
 	"sap.ui5": {
 		"_version": "1.1.0",
@@ -83,38 +80,32 @@
 				"viewType": "XML",
 				"viewPath": "cot.view",
 				"targetAggregation": "detailPages",
-				"clearTarget": false
+				"clearTarget": false,
+				"viewLevel": 1
 			},
-			"routes": [
-				{
-					"pattern": "",
-					"name": "main",
-					"view": "Master",
-					"targetAggregation": "masterPages",
-					"targetControl": "idAppControl",
-					"subroutes": [
-						{
-							"pattern": "{entity}/:tab:",
-							"name": "detail",
-							"view": "Detail"
-						}
-					]
-				},
-				{
-					"name": "catchallMaster",
-					"view": "Master",
-					"targetAggregation": "masterPages",
-					"targetControl": "idAppControl",
-					"subroutes": [
-						{
-							"pattern": ":all*:",
-							"name": "catchallDetail",
-							"view": "NotFound",
-							"transition": "show"
-						}
-					]
-				}
-			]
+			"routes": [{
+				"pattern": "",
+				"name": "main",
+				"view": "Master",
+				"targetAggregation": "masterPages",
+				"targetControl": "idAppControl",
+				"subroutes": [{
+					"pattern": "{entity}/:tab:",
+					"name": "detail",
+					"view": "Detail"
+				}]
+			}, {
+				"name": "catchallMaster",
+				"view": "Master",
+				"targetAggregation": "masterPages",
+				"targetControl": "idAppControl",
+				"subroutes": [{
+					"pattern": ":all*:",
+					"name": "catchallDetail",
+					"view": "NotFound",
+					"transition": "show"
+				}]
+			}]
 		}
 	},
 	"sap.mobile": {
