Data with header

--- a/webapp/localService/mockdata/ApprovalReqSet.json
+++ b/webapp/localService/mockdata/ApprovalReqSet.json
@@ -1,4 +1,12 @@
 [{
+	"RequestID": "0",
+	"approvalSubject": "CAB",
+	"requester": "",
+	"approver": "",
+	"approvalId": "4",
+	"ApprovalSummary": "Change Advisory Board",
+	"approvalType": "CAB"
+}, {	
 	"RequestID": "1",
 	"requester": "Yuri Natchetoi",
 	"approvalSubject": "HP SM software upgrade to new version",
@@ -26,7 +34,15 @@
 	"approvalType": "CAB",
 	"approvalStatus": ""
 }, {
-	"RequestID": "4",
+	"RequestID": "100",
+	"approvalSubject": "Security",
+	"requester": "",
+	"approver": "",
+	"approvalId": "4",
+	"ApprovalSummary": "Physical security authorizations",
+	"approvalType": "SEC"
+}, {	
+	"RequestID": "104",
 	"approvalSubject": "Access to MH 15th floor for George Liu ",
 	"requester": "George Liu ",
 	"approver": "Johan Macedo",
@@ -34,7 +50,7 @@
 	"ApprovalSummary": "Access to MH 15th floor for George Liu ",
 	"approvalType": "SEC"
 }, {
-	"RequestID": "5",
+	"RequestID": "105",
 	"approvalId": "5",
 	"approvalSubject": "Access to MH 1st  floor for Paul Gill",
 	"ApprovalSummary": "Access to MH 1st  floor for Paul Gill",
@@ -42,7 +58,7 @@
 	"approver": "Johan Macedo",
 	"requester": "Paul Gill"
 }, {
-	"RequestID": "6",
+	"RequestID": "106",
 	"approvalId": "6",
 	"approvalType": "SEC",
 	"ApprovalSummary": "Access to 200 Wellington 16th floor for William She",
