--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ extended_runnable_file.html
 UIAdaptation_index.html
 changes_preview.js
 visual_ext_index.html
-/webapp/visual_ext_index.html
+/www/visual_ext_index.html
 fioriHtmlRunner.html
 .*/fioriHtmlRunner.html
 mock_preview_sapui5.html
